--- a/static/custom/modules/vertical/home/home.scss
+++ b/static/custom/modules/vertical/home/home.scss
@@ -1,7 +1,7 @@
 .home-cover {
     background: url(../img/home-header-bg.png) left top no-repeat;
     background-size: cover;
-    height: 20.5rem;
+    height:20.4rem;
     clear: both;
     cursor: pointer;
     .main-title{
